All the layout issues are fixed on the login page

--- a/Content/Stylesheet/responsive.css
+++ b/Content/Stylesheet/responsive.css
@@ -150,77 +150,16 @@
     .fm-login-form {
         width: 500px!important;
     }
-    .fm-login-field > input {
-        height: 70px !important;
-    }
-    .fm-login-caption {
-        font-size: 34px;
-    }
-    .fm-login-forgot-pw a {
-        font-size: 28px;
-    }
-    input.fm-login-btn, input.fm-signup-btn {
-        width: 100%;
-        height: initial;
-        font-size: 34px;
-        padding: 20px;
-        margin-bottom: 30px;
-    }
 }
 /*small devices landscape*/
-@media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : landscape) {
-    .fm-login-form {
-        top: 10vh;
-    }
-    .fm-login-field > input {
-        height: 70px !important;
-    }
-    .fm-login-caption {
-        font-size: 34px;
-    }
-    .fm-login-forgot-pw a {
-        font-size: 28px;
-    }
-    input.fm-login-btn, input.fm-signup-btn {
-        width: 100% !important;
-        height: initial !important;
-        font-size: 34px !important;
-        padding: 20px !important;
-        margin-bottom: 30px !important;
-    }
-}
-/*small devices portrait*/
-@media only screen and (min-device-width : 320px) and (max-device-width : 767px) and (orientation : portrait) {
-    .fm-login-field > input {
-        height: 70px !important;
-    }
-    .fm-login-caption {
-        font-size: 34px;
-    }
-    .fm-login-forgot-pw a {
-        font-size: 28px;
-    }
-    input.fm-login-btn, input.fm-signup-btn {
-        width: 100%;
-        height: initial;
-        font-size: 34px;
-        padding: 20px;
-        margin-bottom: 30px;
-    }
-    .fm-login-caption, .fm-login-field {
-        width: 100% !important;
-        display: block !important;
-    }
-    .fm-logo {
+@media only screen and (min-width : 320px) and (max-width : 767px){
+    .fm-login-button-frame {
+        display: inline-block;
+        margin-top: 20px;
         width: 100%;
     }
-    .fm-remember-me input[type='checkbox'] {
-        width: 50px;
-        height: 50px;
-        margin-right: 10px;
-        vertical-align: middle;
-    }
-    .fm-login-form {
-        top: 25vh;
+    .fm-login-btn, .fm-signup-btn {
+        width: 100%;
+        margin-bottom: 10px;
     }
 }
