--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -27,20 +27,20 @@ body {
     width: 100%;
     display: block;
     padding: 10px;
-    border: 1px solid #303F9F;
+    border: 1px solid #CFD8DC;
     outline: none;
     -webkit-outline: none;
     -moz-outline: none;
     -ms-outline: none;
-    background-color: transparent;
+    background-color: #CFD8DC;
     transition: 0.3s;
 }
 .fm-login-forgot-pw > a {
-    color: #303F9F;
+    color: #78909C;
     text-decoration: none;
 }
 .fm-login-caption {
-    color: #303F9F;
+    color: #CFD8DC;
 }
 .fm-remember-me > input[type="checkbox"] {
     width: 20px;
@@ -61,7 +61,7 @@ body {
     display: inline-block;
     float: left;
     margin-right: 10px;
-    color: #303F9F;
+    color: #CFD8DC;
 }
 .fm-remember-me {
     margin-bottom: 15px;
@@ -74,20 +74,20 @@ body {
     float: left;
     transition: 0.3s;
 }
-.fm-login-btn {
+/*.fm-login-btn {
     border: 1px solid #303F9F;
     color: #303F9F;
 }
 .fm-signup-btn {
     border: 1px solid #FF8F00;
     color: #FF8F00;
-}
-.fm-signup-btn:hover {
+}*/
+.fm-signup-btn {
     border: 1px solid #FF8F00;
     background-color: #FF8F00;
     color: #fff;
 }
-.fm-login-btn:hover {
+.fm-login-btn {
     border: 1px solid #303F9F;
     background-color: #303F9F;
     color: #fff;
@@ -146,7 +146,7 @@ body#fm-login {
     height: 100%;
     z-index: 999;
     overflow: hidden;
-    transform: rotate(45deg) scale(2);
+    transform: rotate(45deg) scale(3);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -182,7 +182,7 @@ body#fm-login {
     transition: 0.5s;
 }
 .cover-block .fm-logo-block > img.fm-logo.after {
-    transform: scale(1);
+    transform: scale(0.6);
     opacity: 1;
     transition: 0.5s;
 }
@@ -197,4 +197,6 @@ body#fm-login {
     left: 0px;
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position: center left;
 }
